# dftmodels

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dftmodels/: __init__.py  stats.py
dftmodels/dft/: __init__.py  config.py  correction.py  series.py
dftmodels/models/: __init__.py  base.py  composite.py  sinusoid.py
dftmodels/utils/: __init__.py  math.py
examples/: 01_dft_normalization.ipynb  02_dft_corrections.ipynb  03_precision_fitting.ipynb  04_decaying_signals.ipynb  05_composite_model.ipynb  06_window_comparison.ipynb  dftmodels.mplstyle  helpers.py
tests/dft/: test_config.py  test_series.py
tests/models/: test_composite.py  test_integration.py  test_lorentzian.py  test_sinusoid.py  test_stability.py
tests/utils/: test_math.py  test_stats.py
